@@ -713,14 +713,14 @@ DISTRIBUTIONS
       YAML::Tiny 1.48
       parent 0.224
       perl 5.008005
-  DBIx-Class-Sims-0.300402
-    pathname: R/RK/RKINYON/DBIx-Class-Sims-0.300402.tar.gz
+  DBIx-Class-Sims-0.300403
+    pathname: R/RK/RKINYON/DBIx-Class-Sims-0.300403.tar.gz
     provides:
-      DBIx::Class::Sims 0.300402
+      DBIx::Class::Sims 0.300403
       DBIx::Class::Sims::Runner undef
       DBIx::Class::Sims::Types undef
       DBIx::Class::Sims::Util undef
-      MyCloner 0.300402
+      MyCloner 0.300403
     requirements:
       Clone::Any 0
       DBD::SQLite 1.40
