@@ -1,3 +1,5 @@
+use 5.22.0;
+
 use strictures 2;
 
 use Test::More;
