@@ -1,9 +1,11 @@
 Revision history for DBIx::Class::Sims (ordered by revision number).
 
 0.000005
+  - Add "types" command to list available Sims types
   - Return and use a --seed
   - Add support for --model
     - Supports <table> -> columns -> <column> -> { sim => <value> }
+    - Supports <table> -> columns -> <column> -> { type => <name> }
   - Improve packaging to include Dockerfile and Changes in /opt/docker
 
 0.000004
